--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "randomstring": "*",
+    "nodemailer": "*"
   }
 }
