fix service sample

--- a/app/service.js.example
+++ b/app/service.js.example
@@ -1,7 +1,7 @@
 app.factory('AuthService', ['$q', '$http','$state', 'cfpLoadingBar', function($q, $http, $state, cfpLoadingBar){
 	return ({
-		hostName: 'http://localhost:8000',
-		//hostName: 'http://baotangvn.online',
+		//hostName: 'http://localhost:8000',
+		hostName: 'http://baotangvn.online',
 		deleteP: deleteP,
 		approvePost: approvePost,
 		addSample: addSample,
@@ -30,13 +30,10 @@ app.factory('AuthService', ['$q', '$http','$state', 'cfpLoadingBar', function($q
 			'lienHo',
 			'ho',
 			'phanHo',
-			'toc', 
-			'giong', 
-			'phanGiong',
+			'toc',
 			'loai', 
 			'duoiLoai', 
-			'coQuanThuMau', 'thon', 
-			'coQuanToChucPhanTich', 
+			'coQuanThuMau', 'thon',
 			'coQuanToChucGiamDinh',
 			'coQuanXuLy',
 			'boPhanLayMauDNA', 
@@ -44,9 +41,8 @@ app.factory('AuthService', ['$q', '$http','$state', 'cfpLoadingBar', function($q
 			'coQuanNhapVatMau',
 			'giaTriSuDung',
 			'tong',
-			'chi',
-			'phanChi',
 			'chiGiong',
+			'phanChiPhanGiong',
 			'loai',
 			'noiLuuTruMau',
 			'viTriLayMauDNA',
