dynamic libreoffice version

--- a/config/config.js.example
+++ b/config/config.js.example
@@ -19,5 +19,6 @@ module.exports = {
 		sitekey : '',
 		secretkey: ''
 	},
-	noThreads: 'optimal'
+	noThreads: 'optimal',
+	libreoffice: 'libreoffice'
 }
