--- a/config/config.js.example
+++ b/config/config.js.example
@@ -20,5 +20,9 @@ module.exports = {
 		secretkey: ''
 	},
 	noThreads: 'optimal',
-	libreoffice: 'libreoffice'
+	libreoffice: 'libreoffice',
+	ssl: {
+		privateKey: '',
+		certificate: '',
+	}
 }
