--- a/config/config.js.example
+++ b/config/config.js.example
@@ -1,8 +1,9 @@
 module.exports = {
 	app: {
-		port: '8000',
+		port: '8001',
 		nonSecurePort: '8000',
-		domain: 'https://baotangvn.online'
+		domain: 'baotangvn.online',
+		mode: 'https'
 	},
 	database: {
 		url: 'mongodb://mongodbuser:mongodbpassword@127.0.0.1:27017/museum'
