--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-useragent": "^1.0.7",
     "fs-extra": "^2.0.0",
     "html-docx-js": "^0.3.1",
+    "html-pdf": "^2.1.0",
     "image-size": "^0.6.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.8",
