--- a/app/service.js.example
+++ b/app/service.js.example
@@ -1,7 +1,7 @@
 app.factory('AuthService', function($q, $http, $state, cfpLoadingBar, $uibModal){
 	return ({
-		// hostName: 'http://localhost:8000',
-		hostName: 'https://baotangvn.online',
+		//hostName: 'http://localhost:8000',
+		hostName: 'http://baotangvn.online',
 		deleteP: deleteP,
 		approvePost: approvePost,
 		addSample: addSample,
