tmp commit owner

--- a/app/service.js.example
+++ b/app/service.js.example
@@ -264,8 +264,10 @@ app.factory('AuthService', function($q, $http, $state, cfpLoadingBar, $uibModal)
 				
 				var id = JSON.parse(err.responseText).field;
 				var x = document.getElementById(id);
-				var element = x.nextElementSibling
-				element.style.borderColor = "red";
+				if (x) {
+					var element = x.nextElementSibling;
+					element.style.borderColor = "red";
+				}
 				setTimeout(function () { // Stop spinner before alerting
 					// alert(JSON.parse(err.responseText).error);
 					var modalInstance = $uibModal.open({
@@ -281,8 +283,6 @@ app.factory('AuthService', function($q, $http, $state, cfpLoadingBar, $uibModal)
 							}
 						}
 					});
-
-					
 				}, 100)
 			}
 		});
@@ -470,8 +470,6 @@ app.factory('AuthService', function($q, $http, $state, cfpLoadingBar, $uibModal)
 
 				})
 			}
-			
-
 			$( ".datepicker" ).datepicker({
 				dateFormat: 'dd/mm/yy',
 				changeMonth: 'true',
