--- a/config/config.js.example
+++ b/config/config.js.example
@@ -3,7 +3,8 @@ module.exports = {
 		port: '8001',
 		nonSecurePort: '8000',
 		domain: 'baotangvn.online',
-		mode: 'https'
+		mode: 'https',
+		sessionCookieName: 'sessionid'
 	},
 	database: {
 		url: 'mongodb://mongodbuser:mongodbpassword@127.0.0.1:27017/museum'
