--- a/app/service.js.example
+++ b/app/service.js.example
@@ -134,8 +134,8 @@ app.factory('AuthService', function($q, $http, $state, cfpLoadingBar, $uibModal)
 
 				xhr.onreadystatechange = function () {
 					if ((xhr.readyState == 4) && (xhr.status == 200)){
-						// console.log(xhr);
 						var disposition = xhr.getResponseHeader('Content-Disposition');
+						disposition = decodeURIComponent(disposition);
 						var fields = disposition.split([';']);
 						var fileNameIndex = -1;
 						fields.map(function (element, index) {
@@ -144,7 +144,6 @@ app.factory('AuthService', function($q, $http, $state, cfpLoadingBar, $uibModal)
 								fileNameIndex = index;
 							}
 						})
-						var fileName = '';
 						if (fileNameIndex == -1){
 							for(var i = 0; i < fields.length; i++){
 								if (fields[i].indexOf('filename=') >= 0){
@@ -152,6 +151,7 @@ app.factory('AuthService', function($q, $http, $state, cfpLoadingBar, $uibModal)
 								}
 							}
 						}
+						var fileName = '';
 						if (fileNameIndex == -1){
 							fileName = 'PCSDL.' + id;
 						}
