--- a/app/service.js.example
+++ b/app/service.js.example
@@ -33,7 +33,6 @@ app.factory('AuthService', function($q, $http, $state, cfpLoadingBar, $uibModal)
 			'ho',
 			'phanHo',
 			'toc',
-			'loai', 
 			'duoiLoai', 
 			'coQuanThuMau', 'thon',
 			'coQuanToChucGiamDinh',
@@ -159,6 +158,7 @@ app.factory('AuthService', function($q, $http, $state, cfpLoadingBar, $uibModal)
 							fileName = fields[fileNameIndex].substring(fields[fileNameIndex].indexOf('PCSDL'));
 							fileName = decodeURIComponent(fileName);
 						}
+						fileName = fileName.replace(/[^a-zA-Z]+$/g, '');
 						var type = xhr.getResponseHeader('Content-Type');
 						// console.log(type);
 						var blob = new Blob([xhr.response], {type: type});
@@ -484,6 +484,8 @@ app.factory('AuthService', function($q, $http, $state, cfpLoadingBar, $uibModal)
 
 	function initDatePicker(_scope) {
 		setTimeout(function () {
+			const ORIGIN_TIME = new Date('1970/1/1');
+			const NULL_TIMES = [ORIGIN_TIME.getTime(), 0];
 			if (_scope){
 				
 				// Edit Form
@@ -494,6 +496,9 @@ app.factory('AuthService', function($q, $http, $state, cfpLoadingBar, $uibModal)
 							// console.log(name);
 							if (_scope[name]){
 								var date = new Date(_scope[name]);
+								if (NULL_TIMES.indexOf(date.getTime()) >= 0) {
+									return _scope[name] = '';
+								}
 								var h = date.getHours();
 								if (h == 2) {
 									_scope[name] = date.getFullYear();
