--- a/app/service.js.example
+++ b/app/service.js.example
@@ -125,7 +125,8 @@ app.factory('AuthService', function($q, $http, $state, cfpLoadingBar, $uibModal)
 			    size: 80,
 			    fill: {
 			      gradient: ["green"]
-			    }
+			    },
+			    animation: false
 			  });
 				var xhr = new XMLHttpRequest();
 				// var xhr = $.ajaxSettings.xhr();
@@ -134,7 +135,7 @@ app.factory('AuthService', function($q, $http, $state, cfpLoadingBar, $uibModal)
 					// console.log(e);
           // For downloads
           if (e.lengthComputable) {
-              console.log((e.loaded / e.total *100|0)+"%");
+ //             console.log((e.loaded / e.total *100|0)+"%");
               $('#circle-progress').circleProgress('value', e.loaded / e.total)
           }
         };
@@ -142,7 +143,7 @@ app.factory('AuthService', function($q, $http, $state, cfpLoadingBar, $uibModal)
         	// console.log('on upload progress');
           // For uploads
           if (e.lengthComputable) {
-              console.log((e.loaded / e.total *100|0)+"%");
+              //console.log((e.loaded / e.total *100|0)+"%");
           }
         };
 				if (fields_form != "") {
