--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.3.5",
+    "cron": "^1.3.0",
     "crypto": "0.0.3",
     "crypto-js": "^3.1.6",
     "debug": "~2.2.0",
